--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/edit_inscripcion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/edit_inscripcion.html.twig
@@ -14,12 +14,12 @@
        <div class="panel-body">
           <table class="table-responsive table-condensed">
              <tbody id="form-collection">
-                <tr><th>Prueba</th><th>Precio</th><th>Estado</th></tr>
+                <tr><th>Prueba</th><th style="max-width: 10em">Precio</th><th>Estado</th></tr>
                 {% for ins in form.inscripciones %}
                 <tr class="subform-row">
                    <td>{{ ins.vars.value.sidPru.sidTprm.sidTprf.nombre }}{% if ins.vars.value.sidPru.sidTprm.sexo == 0 %}, masculino{% elseif ins.vars.value.sidPru.sidTprm.sexo == 1 %}, femenino{% endif %}{% if entornos|length > 1 %}. {{ ins.vars.value.sidPru.sidTprm.entorno }}{% endif %}</td>
-                   <td style="max-width: 12em"{{ form_widget(ins.coste) }}{{ form_errors(ins.coste) }}</td>
-                   <td style="min-width: 9em">{{ form_widget(ins.estado) }}{{ form_errors(ins.estado) }}</td>
+                   <td style="max-width: 10em">{{ form_widget(ins.coste) }}{{ form_errors(ins.coste) }}</td>
+                   <td>{{ form_widget(ins.estado) }}{{ form_errors(ins.estado) }}</td>
                 </tr>
                 {% endfor %}
              </tbody>
